# tebiki

./: AGENTS.md  README.md  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/Sidebar/: index.module.css  index.tsx
src/pages/: About.tsx  Home.tsx
